# emojistats

./: .env.example  .gitignore  Cargo.toml  LICENSE.md  README.md  config-EXAMPLE.toml  config-SAMPLE.toml  unicode-emoji.txt
src/: arg.rs  bot.rs  bot_utility.rs  esbot.rs  main.rs
src/emojistats/: database.rs  mod.rs  model.rs
