[package]
name = "emojistats"
version = "0.1.1"
authors = ["Jonathan Kim <jkim8192@gmail.com>"]
license = "MIT"

[dependencies]
config = "0.4"
dotenv = "0.10"
log = "0.3"
nix = "0.8.1"

[dependencies.log4rs]
version = "0.7"
default-features = false
features = ["console_appender", "file_appender", "pattern_encoder"]

[dependencies.discord]
version = "0.8"
default-features = false

[dependencies.postgres]
version = "0.14"
default-features = false
